#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

lib_LTLIBRARIES = libheaders.la

libheaders_la_SOURCES = headers.cpp mac-header.cpp transport-header.cpp
libheaders_la_CPPFLAGS = @PFICT_CPPFLAGS@
libheaders_la_LDFLAGS = @PFICT_LDFLAGS@
libheaders_la_LIBADD = @PFICT_LIBADD@
