#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = exam_test

exam_test_SOURCES = exam-test.cpp

exam_test_CPPFLAGS = @PFICT_CPPFLAGS@ 
exam_test_LDFLAGS = @PFICT_LDFLAGS@
exam_test_LDADD = @PFICT_LDADD@ 