#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

lib_LTLIBRARIES = libtcp_server_fs.la

libtcp_server_fs_la_SOURCES = tcp-server-fs.cpp ethernet-connector.cpp
libtcp_server_fs_la_CPPFLAGS = @PFICT_CPPFLAGS@
libtcp_server_fs_la_LDFLAGS = @PFICT_LDFLAGS@
libtcp_server_fs_la_LIBADD = @PFICT_LIBADD@
