#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = tcp_server_fs_test

tcp_server_fs_test_SOURCES = tcp-server-fs-test.cpp

tcp_server_fs_test_CPPFLAGS = @PFICT_CPPFLAGS@ 
tcp_server_fs_test_LDFLAGS = @PFICT_LDFLAGS@
tcp_server_fs_test_LDADD = @PFICT_LDADD@ 